--- a/OlyO/rad_01/Data_check.ipynb
+++ b/OlyO/rad_01/Data_check.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3e145c2c54b720188d3f81aca366b75450ff269dcb46a017a8d943f78a24e4cf"
+  "signature": "sha256:456c76e9323dce06ffcc3a30ad963e2e7e0d176d2440c33bee07b59e99960641"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,6 +20,13 @@
      "metadata": {},
      "source": [
       "!head /Volumes/web/trilobite/Crassostrea_gigas_HTSdata/batterbox/RADoly_01/lane1_NoIndex_L001_R1_004.fastq.gz"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Consinder putting iages in repo???"
      ]
     },
     {
