--- a/TE/Redux_TJGR_TE.ipynb
+++ b/TE/Redux_TJGR_TE.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b2593f2d3c5b883ae0247cfd5d080f89ffd384199958ee0de515a3351e70a909"
+  "signature": "sha256:0504a28861f62daccd5913dd1e17d99cff18e6e14d21dff4a4deed79e3815dc5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,7 +13,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "GOAL: Figure out how made the following file"
+      "GOAL: Figure out how I made the following file"
      ]
     },
     {
