--- a/OlyO/rad_01/iplant_stacks.ipynb
+++ b/OlyO/rad_01/iplant_stacks.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c34099259d96b4fa66014caa9de00ecc5a8d096a4b1843c4d5c247242158c1ce"
+  "signature": "sha256:34a90c8a4f5454f5481d730c75af0500631e5f1a85d8c3910872e41d73c9f8b5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9079,6 +9079,54 @@
       "awk 'NR > 13+48' process_radtags.log\n",
       "```"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from IPython.display import HTML\n",
+      "HTML('<iframe src=https://dl.dropboxusercontent.com/u/14117884/Andy/BGI%20Data.html width=80% height=650></iframe>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe src=https://dl.dropboxusercontent.com/u/14117884/Andy/BGI%20Data.html width=80% height=650></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "<IPython.core.display.HTML at 0x104278ad0>"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from IPython.display import HTML\n",
+      "HTML('<iframe src=./tmp/AJ_BGI.html width=80% height=650></iframe>')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<iframe src=./tmp/AJ_BGI.html width=80% height=650></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "<IPython.core.display.HTML at 0x104278b90>"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
