--- a/OlyO/rad_01/Bench.ipynb
+++ b/OlyO/rad_01/Bench.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:05538605338eae9fb07330ab521a2e088fb80565df5e4e605d7144b5771f2b51"
+  "signature": "sha256:e03d6fd477b2fa1d158514e9d34b0e0ea66828779925d3c3bd48dd6e304aa9aa"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -290,6 +290,14 @@
       "* Use Qiagen Gel Purification in the Minelute columns (following instructions for extra steps for products that will be used for sequencing, as above). Elute with 14.5 \u00b5L EB. Then add 1.5\u00b5L of EB containing 1% Tween-20.\n",
       "*Run qPCR (KAPA kit) and Qbit the samples. Dilute samples for submission to sequencing facility.\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
