--- a/TE/Redux_TJGR_TE.ipynb
+++ b/TE/Redux_TJGR_TE.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0504a28861f62daccd5913dd1e17d99cff18e6e14d21dff4a4deed79e3815dc5"
+  "signature": "sha256:244893a445c497e3fe1aecd5fa167ee0a444460464082b3dd0dc52a648d4eefb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2210,29 +2210,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "!head /Volumes/Bay3/Software/RepeatMasker/out/oyster.v9_pls.fa.out"
+      "!head -40 /Volumes/Bay3/Software/RepeatMasker/out/oyster.v9_pls.fa.out"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "   SW   perc perc perc  query          position in query           matching        repeat              position in repeat\r\n",
-        "score   div. del. ins.  sequence       begin   end        (left)   repeat          class/family      begin  end    (left)     ID\r\n",
-        "\r\n",
-        "  192    9.7  0.0  0.0  C10011               3      33     (123) + (TTTG)n         Simple_repeat          1     31    (0)      1  \r\n",
-        "   20    5.9  0.0  0.0  C10039             114     147      (10) + AT_rich         Low_complexity         1     34    (0)      2  \r\n",
-        "  216    0.0  0.0  0.0  C10195             121     144      (15) + (GA)n           Simple_repeat          1     24    (0)      3  \r\n",
-        "   26    5.0  0.0  0.0  C10241               3      42     (118) + AT_rich         Low_complexity         1     40    (0)      4  \r\n",
-        "  272   21.4  0.0  3.1  C10287              29     129      (31) + (CTATG)n        Simple_repeat          1     98    (0)      5  \r\n",
-        "  189    0.0  0.0  0.0  C10325              42      62      (99) + (CATA)n         Simple_repeat          3     23    (0)      6  \r\n",
-        "  210   18.4  0.0  3.7  C10409               5     117      (45) + (CATAG)n        Simple_repeat          1    109    (0)      7  \r\n"
-       ]
-      }
-     ],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -2379,6 +2361,63 @@
        "stream": "stdout",
        "text": [
         "Masking Simple and Low Complexity Repeats...\r\n"
+       ]
+      }
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pwd"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "u'/Users/sr320/git-repos/nb-2015/TE'"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cd /Volumes/Bay3/Software/RepeatMasker"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/Volumes/Bay3/Software/RepeatMasker\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!./RepeatProteinMask -noLowSimple /Volumes/Bay3/Software/trf_data/in/oyster.v9.fa"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Identifying Simple and Low Complexity Repeats...(masking turned off)\r\n"
        ]
       }
      ]
