--- a/_scratch.ipynb
+++ b/_scratch.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4b2ebc214040e0078247cf20224e7de4f165778b4be79eab01228f58ce519f6a"
+  "signature": "sha256:20c1385b1d64ce20a45478781d381a1a11b635aba30a816015a6cf74b44b10c3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "!/Volumes/Bay3/Software/RepeatMasker/RepeatProteinMask -help"
+      "!tail -40 /Volumes/Bay3/Software/RepeatMasker/out/oyster.v9_pls.fa.out"
      ],
      "language": "python",
      "metadata": {},
@@ -21,57 +21,46 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "NAME\r\n",
-        "    RepeatProteinMask - Mask Repeat Proteins in DNA sequence\r\n",
-        "\r\n",
-        "SYNOPSIS\r\n",
-        "      RepeatProteinMask [-pvalue #] [-minscore #] [-wordsize #] [-maxAADist] \r\n",
-        "                        [-noLowSimple] [-noTRF] [-queryStatLen #] <fasta file>\r\n",
-        "\r\n",
-        "DESCRIPTION\r\n",
-        "    The options are:\r\n",
-        "\r\n",
-        "    -h(elp)\r\n",
-        "    -pvalue #\r\n",
-        "        The threshold for accepting matches. Matches must hava a pvalue less\r\n",
-        "        than this number. Default is *NOT* to threshold...it used to be\r\n",
-        "        0.0001!!!!\r\n",
-        "\r\n",
-        "    -minscore #\r\n",
-        "        Threshold on minscore. Note no default is added. So all hits will be\r\n",
-        "        returned unless a minscore is used.\r\n",
-        "\r\n",
-        "    -wordsize #\r\n",
-        "        The wordsize to use with the wublastx search. Default is 3\r\n",
-        "\r\n",
-        "    -querystatlen #\r\n",
-        "        The effective length of the query to use in statistical\r\n",
-        "        calculations.\r\n",
-        "\r\n",
-        "    -maxaadist #\r\n",
-        "        The maximum distance to consider two blastx hits as the same (and\r\n",
-        "        thus contributing to Sum P scores). Default is 333.\r\n",
-        "\r\n",
-        "    -noLowSimple\r\n",
-        "        Turns off masking/annotating of low complexity and simple repeats in\r\n",
-        "        the final output. Low complexity and simple repeat analysis will\r\n",
-        "        still occur prior to looking for matches to the RepeatPep database.\r\n",
-        "\r\n",
-        "    -noTRF\r\n",
-        "        Turns off masking/annotating of tandem repeats in the input\r\n",
-        "        sequence.\r\n",
-        "\r\n",
-        "        Detailed help\r\n",
-        "\r\n",
-        "SEE ALSO\r\n",
-        "        RepeatModeler\r\n",
-        "\r\n",
-        "COPYRIGHT\r\n",
-        "    Copyright 2005 Institute for Systems Biology\r\n",
-        "\r\n",
-        "AUTHOR\r\n",
-        "    Robert Hubley <rhubley@systemsbiology.org>\r\n",
-        "\r\n"
+        "  576    0.0  0.0  0.0  scaffold999      99507   99570   (68340) + (GA)n           Simple_repeat          1     64    (0) 243928  \r\n",
+        "   22    5.6  0.0  0.0  scaffold999     100617  100652   (67258) + AT_rich         Low_complexity         1     36    (0) 243929  \r\n",
+        "   23   23.3  0.0  0.0  scaffold999     100804  100833   (67077) + AT_rich         Low_complexity         1     30    (0) 243930  \r\n",
+        "  252    8.6  0.0  0.0  scaffold999     101831  101865   (66045) + (T)n            Simple_repeat          1     35    (0) 243931  \r\n",
+        "   21    0.0  0.0  0.0  scaffold999     102044  102064   (65846) + AT_rich         Low_complexity         1     21    (0) 243932  \r\n",
+        "  240   19.6  0.0  0.0  scaffold999     105058  105108   (62802) + CT-rich         Low_complexity        65    115    (0) 243933  \r\n",
+        "  231   19.2  0.0  0.0  scaffold999     105436  105508   (62402) + CT-rich         Low_complexity        58    130    (0) 243934  \r\n",
+        "   29    3.5  0.0  0.0  scaffold999     105542  105570   (62340) + AT_rich         Low_complexity         1     29    (0) 243935  \r\n",
+        "  246    6.2  0.0  0.0  scaffold999     105593  105624   (62286) + (TC)n           Simple_repeat          1     32    (0) 243936  \r\n",
+        "  183    4.2  0.0  0.0  scaffold999     106967  106990   (60920) + (C)n            Simple_repeat          1     24    (0) 243937  \r\n",
+        "   21    5.7  0.0  0.0  scaffold999     110252  110286   (57624) + AT_rich         Low_complexity         1     35    (0) 243938  \r\n",
+        "   31    4.4  0.0  0.0  scaffold999     112127  112171   (55739) + AT_rich         Low_complexity         1     45    (0) 243939  \r\n",
+        "   26    0.0  0.0  0.0  scaffold999     112336  112361   (55549) + AT_rich         Low_complexity         1     26    (0) 243940  \r\n",
+        "  468    0.0  0.0  0.0  scaffold999     112611  112662   (55248) + (TC)n           Simple_repeat          1     52    (0) 243941  \r\n",
+        "   21    5.7  0.0  0.0  scaffold999     114218  114252   (53658) + AT_rich         Low_complexity         1     35    (0) 243942  \r\n",
+        "   40   23.4  0.0  0.0  scaffold999     116526  116572   (51338) + AT_rich         Low_complexity         1     47    (0) 243943  \r\n",
+        "  189    0.0  0.0  0.0  scaffold999     117934  117954   (49956) + (G)n            Simple_repeat          1     21    (0) 243944  \r\n",
+        "   24    3.2  0.0  0.0  scaffold999     121402  121432   (46478) + AT_rich         Low_complexity         1     31    (0) 243945  \r\n",
+        "   41    4.8  0.0  0.0  scaffold999     123154  123215   (44695) + AT_rich         Low_complexity         1     62    (0) 243946  \r\n",
+        "   24   28.9  0.0  0.0  scaffold999     128410  128447   (39463) + AT_rich         Low_complexity         1     38    (0) 243947  \r\n",
+        "  225    0.0  0.0  0.0  scaffold999     130490  130514   (37396) + (C)n            Simple_repeat          1     25    (0) 243948  \r\n",
+        "   21    0.0  0.0  0.0  scaffold999     137262  137282   (30628) + AT_rich         Low_complexity         1     21    (0) 243949  \r\n",
+        "  180   14.3  0.0  0.0  scaffold999     137473  137514   (30396) + (TTTTG)n        Simple_repeat          2     43    (0) 243950  \r\n",
+        "  205    8.8  0.0  2.9  scaffold999     140286  140320   (27590) + (TAAAAA)n       Simple_repeat          3     36    (0) 243951  \r\n",
+        "  228    6.7  0.0  0.0  scaffold999     142082  142111   (25799) + (CGGA)n         Simple_repeat          3     32    (0) 243952  \r\n",
+        "  192   17.6  0.0  0.0  scaffold999     143448  143481   (24429) + (TTA)n          Simple_repeat          2     35    (0) 243953  \r\n",
+        "   25   28.2  0.0  0.0  scaffold999     145233  145271   (22639) + AT_rich         Low_complexity         1     39    (0) 243954  \r\n",
+        "  324    4.8  0.0  0.0  scaffold999     145756  145797   (22113) + (GA)n           Simple_repeat          2     43    (0) 243955  \r\n",
+        "  459    0.0  0.0  0.0  scaffold999     146541  146591   (21319) + (TC)n           Simple_repeat          1     51    (0) 243956  \r\n",
+        "   22    7.0  0.0  0.0  scaffold999     147370  147412   (20498) + AT_rich         Low_complexity         1     43    (0) 243957  \r\n",
+        "  289   17.7  0.0  3.8  scaffold999     148718  148799   (19111) + (CTATG)n        Simple_repeat          1     79    (0) 243958  \r\n",
+        "  288    7.0  0.0  0.0  scaffold999     148823  148865   (19045) + (CTATG)n        Simple_repeat          1     43    (0) 243958  \r\n",
+        "  395   19.4  0.0  3.9  scaffold999     149013  149146   (18764) + (CTATG)n        Simple_repeat          1    129    (0) 243959  \r\n",
+        "   21    5.7  0.0  0.0  scaffold999     153751  153785   (14125) + AT_rich         Low_complexity         1     35    (0) 243960  \r\n",
+        "   22    3.5  0.0  0.0  scaffold999     155983  156011   (11899) + AT_rich         Low_complexity         1     29    (0) 243961  \r\n",
+        "   21    0.0  0.0  0.0  scaffold999     157962  157982    (9928) + AT_rich         Low_complexity         1     21    (0) 243962  \r\n",
+        "   25   28.0  0.0  0.0  scaffold999     158614  158638    (9272) + AT_rich         Low_complexity         1     25    (0) 243963  \r\n",
+        "   24    5.3  0.0  0.0  scaffold999     160600  160637    (7273) + AT_rich         Low_complexity         1     38    (0) 243964  \r\n",
+        "   21    5.7  0.0  0.0  scaffold999     162318  162352    (5558) + AT_rich         Low_complexity         1     35    (0) 243965  \r\n",
+        "  330    2.6  0.0  0.0  scaffold999     166754  166792    (1118) + (GA)n           Simple_repeat          2     40    (0) 243966  \r\n"
        ]
       }
      ],
