--- a/TE/Redux_TJGR_TE.ipynb
+++ b/TE/Redux_TJGR_TE.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:244893a445c497e3fe1aecd5fa167ee0a444460464082b3dd0dc52a648d4eefb"
+  "signature": "sha256:bab07e71353459fb29fe7b2aa30a9c0407bcec58112ba2fe95c746b2ef51b8e6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2291,6 +2291,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "!head /Volumes/web/cnidarian/TJGR_oyster.v9.fa.annot"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "cd /Volumes/Bay3/Software/RepeatMasker\n"
      ],
      "language": "python",
@@ -2418,6 +2428,27 @@
        "stream": "stdout",
        "text": [
         "Identifying Simple and Low Complexity Repeats...(masking turned off)\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "   - TRF         : 66143\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "   - RepeatMasker: 0\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Masking Repeat Proteins...\r\n"
        ]
       }
      ]
