--- a/TE/Redux_TJGR_TE.ipynb
+++ b/TE/Redux_TJGR_TE.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bab07e71353459fb29fe7b2aa30a9c0407bcec58112ba2fe95c746b2ef51b8e6"
+  "signature": "sha256:31db6795116b3a0c014e696531ca6a470dba3f41c0d2f296a468f2f2ff275495"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2214,7 +2214,55 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "   SW   perc perc perc  query          position in query           matching        repeat              position in repeat\r\n",
+        "score   div. del. ins.  sequence       begin   end        (left)   repeat          class/family      begin  end    (left)     ID\r\n",
+        "\r\n",
+        "  192    9.7  0.0  0.0  C10011               3      33     (123) + (TTTG)n         Simple_repeat          1     31    (0)      1  \r\n",
+        "   20    5.9  0.0  0.0  C10039             114     147      (10) + AT_rich         Low_complexity         1     34    (0)      2  \r\n",
+        "  216    0.0  0.0  0.0  C10195             121     144      (15) + (GA)n           Simple_repeat          1     24    (0)      3  \r\n",
+        "   26    5.0  0.0  0.0  C10241               3      42     (118) + AT_rich         Low_complexity         1     40    (0)      4  \r\n",
+        "  272   21.4  0.0  3.1  C10287              29     129      (31) + (CTATG)n        Simple_repeat          1     98    (0)      5  \r\n",
+        "  189    0.0  0.0  0.0  C10325              42      62      (99) + (CATA)n         Simple_repeat          3     23    (0)      6  \r\n",
+        "  210   18.4  0.0  3.7  C10409               5     117      (45) + (CATAG)n        Simple_repeat          1    109    (0)      7  \r\n",
+        "   25    3.1  0.0  0.0  C10589               5      36     (129) + AT_rich         Low_complexity         1     32    (0)      8  \r\n",
+        "  230    8.1  2.7  0.0  C10655              37      73      (93) + (TCCG)n         Simple_repeat          4     41    (0)      9  \r\n",
+        "  222    6.2  0.0  0.0  C10715              67      98      (68) + (G)n            Simple_repeat          1     32    (0)     10  \r\n",
+        "   27    0.0  0.0  0.0  C10845             115     141      (27) + AT_rich         Low_complexity         1     27    (0)     11  \r\n",
+        "   22    0.0  0.0  0.0  C1085                1      22      (82) + AT_rich         Low_complexity         1     22    (0)     12  \r\n",
+        "  318   10.6  0.0  0.0  C10901               1      47     (122) + (TCCG)n         Simple_repeat          4     50    (0)     13  \r\n",
+        "  529    0.0  0.0  0.0  C10907             110     169       (0) + tRNA-Pro-CCA    tRNA                   1     60   (15)     14  \r\n",
+        "  270    0.0  0.0  0.0  C10927               1      30     (139) + (TC)n           Simple_repeat          1     30    (0)     15  \r\n",
+        "   46    0.0  0.0  0.0  C10927              44      89      (80) + AT_rich         Low_complexity         1     46    (0)     16  \r\n",
+        "   25    3.1  0.0  0.0  C11015             101     132      (39) + AT_rich         Low_complexity         1     32    (0)     17  \r\n",
+        "  230    8.1  2.7  0.0  C11027              48      84      (87) + (TCCG)n         Simple_repeat          4     41    (0)     18  \r\n",
+        "  258    8.1  0.0  0.0  C11045              91     127      (44) + (G)n            Simple_repeat          1     37    (0)     19  \r\n",
+        "  198   29.3  0.0  5.3  C11083              51     169       (3) + (TACTG)n        Simple_repeat          2    114    (0)     20  \r\n",
+        "   24    5.3  0.0  0.0  C11097              34      71     (101) + AT_rich         Low_complexity         1     38    (0)     21  \r\n",
+        "   23    0.0  0.0  0.0  C11099             136     158      (14) + AT_rich         Low_complexity         1     23    (0)     22  \r\n",
+        "   23    7.8  0.0  0.0  C11113              50     100      (73) + AT_rich         Low_complexity         1     51    (0)     23  \r\n",
+        "   21    3.6  0.0  0.0  C11163               3      30     (143) + AT_rich         Low_complexity         1     28    (0)     24  \r\n",
+        "  249    3.3  0.0  0.0  C11215              36      65     (109) + (TCCG)n         Simple_repeat          3     32    (0)     25  \r\n",
+        "  287    4.9  2.4  0.0  C11227              30      70     (104) + (TCCG)n         Simple_repeat          4     45    (0)     26  \r\n",
+        "   23    9.2  0.0  0.0  C11264             110     174       (0) + AT_rich         Low_complexity         1     65    (0)     27  \r\n",
+        "  305   10.0  2.0  0.0  C11292              88     137      (38) + (CAGA)n         Simple_repeat          4     54    (0)     28  \r\n",
+        "   23    5.4  0.0  0.0  C11302               1      37     (138) + AT_rich         Low_complexity         1     37    (0)     29  \r\n",
+        "  296   24.9  0.0  6.8  C11350              31     155      (21) + (TACTG)n        Simple_repeat          3    119    (0)     30  \r\n",
+        "   29    0.0  0.0  0.0  C11462              88     116      (61) + AT_rich         Low_complexity         1     29    (0)     31  \r\n",
+        "  180    0.0  0.0  0.0  C11464               6      25     (152) + (CA)n           Simple_repeat          2     21    (0)     32  \r\n",
+        "   34    4.2  0.0  0.0  C11480             126     173       (5) + AT_rich         Low_complexity         1     48    (0)     33  \r\n",
+        "  414    0.0  0.0  0.0  C11484             133     178       (0) + (TCTA)n         Simple_repeat          2     47    (0)     34  \r\n",
+        "  311    6.5  2.2  0.0  C11574              49      94      (85) + (TCTG)n         Simple_repeat          4     50    (0)     35  \r\n",
+        "  198    0.0  0.0  0.0  C1159                1      22      (82) + (TC)n           Simple_repeat          1     22    (0)     36  \r\n",
+        "  243    7.9  0.0  0.0  C11614              15      52     (128) + (CATAG)n        Simple_repeat          1     38    (0)     37  \r\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -2295,7 +2343,25 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "pValue      Score Method   SeqID              Begin    End        Repeat             Type               Begin    End     \r\n",
+        "9.50e-05      109 WUBlastX C10153            3        158      - BEL11_DR        LTR/Pao              656      707\r\n",
+        "8.90e-05       97 WUBlastX C10177            2        157      - CR1-20_SP_pol   LINE/L2              679      731\r\n",
+        "7.30e-12      174 WUBlastX C10191            2        157      - Copia3_OS       LTR/Copia           1150     1201\r\n",
+        "2.60e-01       59 WUBlastX C10245            5        154      - Penelope-13_XT_ LINE/Penelope        435      484\r\n",
+        "2.00e-04       85 WUBlastX C10291            2        160      - COPMET          LTR/Copia             75      125\r\n",
+        "3.20e-01       50 WUBlastX C10475            3        149      - Tx1-2_BF_pol    LINE/L1-Tx1         1083     1131\r\n",
+        "6.30e-01       59 WUBlastX C10673            37       162      + DIRS-5_NV_pol   LTR/DIRS             189      230\r\n",
+        "1.80e-05      132 WUBlastX C10675            1        165      + CR1-1_LG_pol    LINE/L2              827      881\r\n",
+        "1.30e-02      100 WUBlastX C10805            1        168      - I-2_AC_pol      LINE/I               498      553\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -2450,7 +2516,77 @@
        "text": [
         "Masking Repeat Proteins...\r\n"
        ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "   - Protein Hits = 58468\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Done!\r\n"
+       ]
       }
+     ],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!tail /Volumes/Bay3/Software/trf_data/in/oyster.v9.fa.annot"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2.00e-06       63 WUBlastX scaffold998       145302   145862   - Gypsy-15_NV_pol LTR/Gypsy            324      514\r\n",
+        "2.40e-03       78 WUBlastX scaffold998       145314   145685   - Gypsy-1_RO_pol  LTR/Gypsy            402      523\r\n",
+        "2.00e-06       27 WUBlastX scaffold998       145850   146155   - Gypsy-15_NV_pol LTR/Gypsy            223      328\r\n",
+        "7.10e-02       65 WUBlastX scaffold998       145931   146152   - Gyp3_Cis        LTR/Gypsy            351      422\r\n",
+        "5.30e-07       31 WUBlastX scaffold998       146157   146279   - Gypsy-30_DR_pol LTR/Gypsy-Cigr        46       85\r\n",
+        "9.91e-01       61 WUBlastX scaffold998       146840   147142   - Ulysses_gag     LTR/Gypsy            289      394\r\n",
+        "3.60e-12       40 WUBlastX scaffold999       165169   165276   + ISL2EU-4_HM_ex  DNA/IS4EU             83      118\r\n",
+        "1.80e-03       23 WUBlastX scaffold999       165639   165812   + ISL2EU-2_HM_ex  DNA/IS4EU            322      380\r\n",
+        "9.20e-05       93 WUBlastX scaffold999       165695   166144   + ISL2EU-5_HM_ex  DNA/Kolobok-IS4      368      510\r\n",
+        "1.50e-10       97 WUBlastX scaffold999       165827   166144   + ISL2EU-1_HM_ex  DNA/IS4EU            356      457\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!wc -l /Volumes/Bay3/Software/trf_data/in/oyster.v9.fa.annot"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "   58469 /Volumes/Bay3/Software/trf_data/in/oyster.v9.fa.annot\r\n"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Create BED with just Protein hits"
      ]
     },
     {
